<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/moments"
            android:icon="@mipmap/ic_share_moments"
            android:title="@string/webview" />
        <item
            android:id="@+id/bottomSheetActivity"
            android:icon="@mipmap/ic_share_wechat"
            android:title="@string/bottomsheet" />
        <item
            android:id="@+id/Service"
            android:icon="@mipmap/ic_share_weibo"
            android:title="@string/service" />
    </group>

    <item
        android:id="@+id/NotifyService"
        android:icon="@mipmap/ic_share_qq"
        android:title="@string/notify_service" />
    <item
        android:id="@+id/TextInput_Layout"
        android:icon="@mipmap/ic_share_qzone"
        android:title="@string/textinput_layout" />
    <item
        android:id="@+id/Recycler_View"
        android:icon="@mipmap/ic_share_moments"
        android:title="@string/recycler_view" />
    <item
        android:id="@+id/tab_layout"
        android:icon="@mipmap/ic_share_wechat"
        android:title="@string/tab_layout" />
    <item
        android:id="@+id/MD"
        android:icon="@mipmap/ic_share_weibo"
        android:title="@string/MD" />
    <item
        android:id="@+id/okhttp"
        android:icon="@mipmap/ic_share_qq"
        android:title="@string/okHttp" />
    <item
        android:icon="@mipmap/ic_share_qzone"
        android:title="@string/qzone" />
</menu>