<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.hante.newprojectsum.activitys.UserInfomationActivity">
<com.example.hante.newprojectsum.custome.TitleBar
    android:id="@+id/user_titlebar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_color"
    android:paddingTop="@dimen/padding_top"
    android:fitsSystemWindows="true"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
    />

    <Button
        android:id="@+id/go_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_bg"
        android:text="@string/buy"/>
</LinearLayout>
