<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/nav_head_background_img"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@mipmap/topinfo_ban_bg"
        android:scaleType="centerCrop"/>

         <ImageView
             android:layout_marginTop="30dp"
            android:id="@+id/user_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
             android:layout_marginBottom="50dp"
             android:layout_marginLeft="16dp"
         />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="@dimen/user_text_size"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


</FrameLayout>
